--- a/src/scss/components/_components-dir.scss
+++ b/src/scss/components/_components-dir.scss
@@ -16,8 +16,9 @@
 @import 'texte-image';
 @import 'profils-equipe';
 @import 'mission-categories';
-@import 'liste-expertise-avec-filtre';
+@import 'liste-expertises-avec-filtre';
 @import 'liste-realisations-avec-filtre';
 @import 'temoignage';
 @import 'listing-process';
 @import 'liste-expertise';
+@import 'besoins-icones';
