--- a/src/scss/globals/_buttons.scss
+++ b/src/scss/globals/_buttons.scss
@@ -43,7 +43,7 @@
     }
   }
 
-  span.btn-icon {
+  .btn-icon {
     background-color: $bleu-principal;
     padding: 14px;
     display: flex;
@@ -68,7 +68,7 @@
     visibility: hidden;
   }
 
-  span.btn-icon {
+  .btn-icon {
     background: $blanc;
     border-top-right-radius: 8px;
     border-bottom-right-radius: 8px;
@@ -143,7 +143,7 @@
     color: $bleu-principal;
   }
 
-  span.btn-icon {
+  .btn-icon {
     background-color: $bleu-secondaire;
     padding: 12px;
     display: flex;
@@ -190,7 +190,7 @@
     border-bottom-left-radius: 8px;
   }
 
-  span.btn-icon {
+  .btn-icon {
     background-color: $bleu-principal;
     padding: 14px;
     display: flex;
@@ -237,7 +237,7 @@
     border-bottom-left-radius: 8px;
   }
 
-  span.btn-icon {
+  .btn-icon {
     background-color: $blanc;
     padding: 14px;
     display: flex;
@@ -284,7 +284,7 @@
     border-bottom-left-radius: 8px;
   }
 
-  span.btn-icon {
+  .btn-icon {
     background-color: $blanc;
     padding: 14px;
     display: flex;
@@ -307,8 +307,31 @@
   font-weight: 500;
   font-size: 14px;
   cursor: pointer;
+}
 
-  @media only screen and (max-width: 991px) {
-    font-size: 11px;
+// ============================================
+// Responsive Global Boutons
+// ============================================
+
+@media only screen and (max-width: 991px) {
+  .btn-primary,
+  .btn-secondary-footer,
+  .btn-secondary,
+  .btn-ghost,
+  .btn-primary-footer,
+  .btn-tertiary {
+    width: 100%;
+    text-align: center;
   }
+}
+
+@media only screen and (max-width: 767px) {
+  .blog-section .blog-card-content .top-content {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+  }
+  .blog-card-badge {
+    margin-bottom: 10px;
+}
 }
