--- a/src/scss/shortcodes/_video.scss
+++ b/src/scss/shortcodes/_video.scss
@@ -6,18 +6,14 @@
   padding: 0;
 
   &:after {
-    font-size: 45px;
     position: absolute;
     left: 50%;
     top: 50%;
-    margin-left: -32px;
-    margin-top: -32px;
-    content: "\F4F4";
-    font-family: bootstrap-icons;
+    transform: translate(-50%, -50%); // ✅ Meilleur que margin négatif
+    content: "";
     width: 64px;
     height: 64px;
-    background: $white;
-    color: $bleu-secondaire;
+    background-color: $white;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -32,6 +28,13 @@
       0% calc(100% - 4px),
       0% 4px
     );
+    
+    background-image: url('data:image/svg+xml;utf8,<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M5 4.98951C5 4.01835 5 3.53277 5.20249 3.2651C5.37889 3.03191 5.64852 2.88761 5.9404 2.87018C6.27544 2.85017 6.67946 3.11953 7.48752 3.65823L18.0031 10.6686C18.6708 11.1137 19.0046 11.3363 19.1209 11.6168C19.2227 11.8621 19.2227 12.1377 19.1209 12.383C19.0046 12.6635 18.6708 12.886 18.0031 13.3312L7.48752 20.3415C6.67946 20.8802 6.27544 21.1496 5.9404 21.1296C5.64852 21.1122 5.37889 20.9679 5.20249 20.7347C5 20.467 5 19.9814 5 19.0103V4.98951Z" stroke="%232E76B8" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 24px 24px;
+    transition: all 0.3s ease;
+    border-radius: 8px;
   }
 }
 
