--- a/src/scss/components/_components-dir.scss
+++ b/src/scss/components/_components-dir.scss
@@ -22,3 +22,8 @@
 @import 'listing-process';
 @import 'liste-expertise';
 @import 'besoins-icones';
+@import 'frise-chronologique';
+@import 'valeurs-icones';
+@import 'onglet-accordion';
+@import 'chiffres-cles';
+@import 'liste-categorie-expertises';
