--- a/src/scss/pages/_actualites-liste.scss
+++ b/src/scss/pages/_actualites-liste.scss
@@ -371,7 +371,7 @@ h3.blog-card-title {
 
 .blog-author-date {
   font-size: 13px;
-  color: #666;
+  color: $bleu-principal;
 }
 
 // ============================================
