--- a/src/scss/components/_besoins-icones.scss
+++ b/src/scss/components/_besoins-icones.scss
@@ -9,12 +9,12 @@
   background-color: $bg;
 
   @media only screen and (max-width: 991px) {
-    padding: 60px 0;
+    padding: 0;
     overflow: hidden;
   }
 
   @media only screen and (max-width: 575px) {
-    padding: 40px 0;
+    padding: 0;
   }
 }
 .besoins-icones-section .col-lg-6.col-md-12 {
@@ -116,7 +116,7 @@
 
   @media only screen and (min-width: 992px) {
     margin-left: calc((100vw - 1140px) / -2);
-        max-width: 708px;
+    max-width: 708px;
   }
 
   @media only screen and (min-width: 1450px) {
@@ -172,7 +172,6 @@
   gap: 20px;
   align-items: flex-start;
   transition: all 0.3s ease;
-  opacity: 0;
   animation: fadeInUp 0.6s ease forwards;
 
   @for $i from 1 through 12 {
@@ -320,5 +319,15 @@
   to {
     opacity: 1;
     transform: translateY(0);
+  }
+}
+
+@media only screen and (max-width: 991px) {
+  .besoins-icones-list {
+    margin-top: 0;
+    padding-bottom: 25px;
+  }
+  .besoin-card {
+    margin: 0 auto;
   }
 }
