--- a/src/scss/components/_slider-temoignages.scss
+++ b/src/scss/components/_slider-temoignages.scss
@@ -61,7 +61,7 @@
   gap: 24px;
   justify-content: flex-start;
   padding-left: max(calc((100vw - 1320px) / 2), 20px);
-  align-items: stretch;
+  align-items: flex-start;
 
   @media (min-width: 768px) and (max-width: 1199px) {
     padding-left: 20px;
